src/test/ui/suggestions/pub-ident-fn.stderr
error: missing `fn` for method definition
  --> $DIR/pub-ident-fn.rs:11:4
   |
LL | pub   foo(s: usize) -> bool { true }
   |    ^^^
help: add `fn` here to parse `foo` as a public method
   |
LL | pub fn foo(s: usize) -> bool { true }
   |     ^^

error: aborting due to previous error

